fixed project description not loading properly

--- a/src/scss/partials/_lets-connect.scss
+++ b/src/scss/partials/_lets-connect.scss
@@ -11,6 +11,7 @@
 
     &-socials-container {
         text-align: center;
+        margin: 0 auto;
         padding: $lets-connect-social-padding-top 0 $lets-connect-social-padding-vert 0;
     }
 
