--- a/src/css/style.css
+++ b/src/css/style.css
@@ -428,6 +428,7 @@ header ul {
     padding-top: 20px; }
   .lets-connect-socials-container {
     text-align: center;
+    margin: 0 auto;
     padding: 40px 0 20px 0; }
   .lets-connect-social {
     margin: auto 23px; }
