--- a/src/scss/partials/_project-details.scss
+++ b/src/scss/partials/_project-details.scss
@@ -23,6 +23,7 @@
             padding-left: 2%;
             @include font-manager("view-online");
         }
-        margin-bottom: 5%;
+        padding-top: 10%;
+        padding-bottom: 25%;
     }
 }
