--- a/src/scss/partials/_slideshow.scss
+++ b/src/scss/partials/_slideshow.scss
@@ -18,9 +18,14 @@ body {font-family: Verdana,sans-serif;margin:0}
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: black;
+    color: rgba(0,0,0,0.8);
     font-weight: bold;
+    
     font-size: 18px;
+    @include mq('desktop-wide', max) {
+        font-size: 26px;
+	  }
+    
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     top: 50%;
