--- a/views/slideshow.html
+++ b/views/slideshow.html
@@ -2,40 +2,40 @@
 
 <div class="slideshow-container">
 
-<div data-ng-repeat="obj in projectData track by $index" class="mySlides fade" slideshow>
-  <div class="slideshow-numbertext">{{$index+1}} / {{projectData.length}}</div>
+  <div data-ng-repeat="obj in projectData track by $index" class="mySlides fade" slideshow>
+    <div class="slideshow-numbertext">{{$index+1}} / {{projectData.length}}</div>
   
-  <!--<div
-    class="slideshow-title"
-    data-ng-style="{
-      'background-image': 'url({{obj.imageFilename}})',
-      'background-size': '100vw',
-      'background-repeat': 'no-repeat',
-      'background-position': 'center'
+    <!--<div
+      class="slideshow-title"
+      data-ng-style="{
+        'background-image': 'url({{obj.imageFilename}})',
+        'background-size': '100vw',
+        'background-repeat': 'no-repeat',
+        'background-position': 'center'
       }"
-  >-->
+    >-->
 
-  <img class="slideshow-title" ng-src="{{obj.imageFilename}}" />
+    <img class="slideshow-title" ng-src="{{obj.imageFilename}}" />
+
+    <!--'background-color': '{{obj.color}}';-->
+    <!--{{obj.title}}-->
+  </div>
+  <!--<div class="slideshow-text">{{obj.description}}</div>-->
+
+  <!-- end of ng-repeat -->
 
   <a class="slideshow-prev" ng-click="plusSlides(-1)" slideshow>&#10094;</a>
   <a class="slideshow-next" ng-click="plusSlides(1)" slideshow>&#10095;</a>
 
   <div class="slideshow-dot-buttons" slideshow>
-  <span 
+    <span 
       ng-repeat="obj in projectData track by $index" 
       class="slideshow-dot" 
       ng-class="{slideshowDotOver: ($index==slideIndex-1)}" 
       ng-click="currentSlide($index+1)">
-    </span> 
+    </span>
   </div>
 
-  <!--'background-color': '{{obj.color}}';-->
-  <!--{{obj.title}}-->
-  </div>
-  <!--<div class="slideshow-text">{{obj.description}}</div>-->
 </div>
-
-</div>
-<br>
 
 
